--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Copyright © 2009-2010 Steven Obua (http://github.com/phlegmaticprogrammer)
+Copyright Â© 2009-2010 Steven Obua (http://github.com/phlegmaticprogrammer)
 
 This is the repository of the Babel-17 project. Its goal is to specify the programming language Babel-17 and to provide implementations of it.
 
