remove singleline comments from grammar

--- a/Babel17_Docs/babel17.tex
+++ b/Babel17_Docs/babel17.tex
@@ -144,7 +144,7 @@ String consisting only of line feed via 32-bit escaping & \verb+"\U0000000A"+
 \end{tabular}
 \end{center}
 
-Comments in Babel-17 obey a similar syntax as in C: There are multiline comments written between matching pairs of \verb+/*+ and \verb+*/+, and there are comments that occupy the rest of the line which start with a \verb+/*/+.
+Comments in Babel-17 are written between matching pairs of \verb+/*+ and \verb+*/+ and can span several lines.
 
 Finally, here are all ASCII special symbols that can occur in a Babel-17 program:
 \newcommand{\mapcurlyleft}{\{|}
